# image_transformer

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt  image_operations.h  jpeg.cpp  jpeg.h  main.cpp
src/: error.h  helper.h  image.h  image_operations.h  jpeg.cpp  jpeg.h  main.cpp
